--- a/styles/style.css
+++ b/styles/style.css
@@ -287,3 +287,43 @@ nav ul a{
     justify-content: center;
     
    }
+
+
+
+
+
+   /* footer style */
+   footer{
+    /* display: flex; */
+    /* justify-content: space-around;
+    align-items: center; */
+    background-color: rgba(255, 248, 243, 1);
+    margin: 100px auto;
+     
+   }
+   .footer-full{
+    max-width: 1140px;
+     margin: 0px auto;
+     padding: 100px;
+   
+    display: flex;
+    gap: 100px;
+    justify-content: space-around;
+   }
+   footer h4{
+    font-size: 35px;
+    font-weight: bold;
+   }
+   .footer-img{
+    margin-right: 23px;
+
+   }
+
+   .footer-two input[placeholder="Your Name"], .footer-two input[placeholder="Your Email"], .footer-two textarea{
+    padding: 18px 30px;
+    border: none;
+    width:100%;
+    margin-bottom: 24px;
+   }
+ 
+
