--- a/styles/style.css
+++ b/styles/style.css
@@ -165,6 +165,7 @@ nav ul a{
      text-align: center;
      border: 2px solid black;
      border-radius: 4px;
+     margin: 0 auto;
      
      
   }
